# library

./: .gitmodules  CMakeLists.txt  README.md  appveyor.yml  test.cmake
example/: CMakeLists.txt  hello.dylib  main.c  main.cpp
example/cmake/: add_example.cmake
glug_library/: CMakeLists.txt
glug_library/include/glug/: library.h
glug_library/src/: CMakeLists.txt  library.c  library.h  library_platform.h  library_t.h
glug_library/src/linux/: library.c  library.cpp
glug_library/src/macos/: library.c  library.cpp
glug_library/src/nix/: library.c  library.cpp
glug_library/src/unix/: library.cpp
glug_library/src/win32/: library.c  library.cpp
test/: CMakeLists.txt  add_unit_test.cmake
test/integration/: hello.dylib  main.c
test/unit/: create_suite.h  loading.c  makefilename.c  symbols.c
test/unit/mocks/: extension.mock.c  libs.mock.c  libs.mock.h  load.mock.c  soname.mock.c  symbols.mock.c
